--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <li>
             <a href="https://www.joshwcomeau.com/">www.joshwcomeau.com</a>
         </li>
+        <li>
+            <a href="https://fasterthanli.me/">fasterthanli.me</a>
+        </li>
     </ul>
 </body>
 
