--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <li>
             <a href="https://fasterthanli.me/">fasterthanli.me</a>
         </li>
+        <li>
+            <a href="https://www.totaltypescript.com/">www.totaltypescript.com</a>
+        </li>
     </ul>
 </body>
 
