Setup Svelte + TailwindCSS + Vite

--- a/index.html
+++ b/index.html
@@ -1,49 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
-    <title>Fonts</title>
-
-    <style>
-        body {
-            color: #24292e;
-            background-color: #24292e;
-            font-family: 'Source Code Pro', monospace;
-            font-size: 24px;
-            letter-spacing: -2px;
-        }
-
-        a {
-            color: #d0d8e1;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-
-<body>
-    <ul>
-        <li>
-            <a href="https://alexsaveau.dev/">alexsaveau.dev</a>
-        </li>
-        <li>
-            <a href="https://www.joshwcomeau.com/">www.joshwcomeau.com</a>
-        </li>
-        <li>
-            <a href="https://fasterthanli.me/">fasterthanli.me</a>
-        </li>
-        <li>
-            <a href="https://www.totaltypescript.com/">www.totaltypescript.com</a>
-        </li>
-    </ul>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blogs</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
